// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScheduleFilters finds all games involving one or more teams 1`] = `
Array [
  Object {
    "away": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "23",
    "date": 2002-09-08T04:00:00.000Z,
    "home": Object {
      "abbrev": "WAS",
      "color": "681D13",
      "conference": "NFC",
      "division": "East",
      "id": "was",
      "location": "Washington",
      "name": "Redskins",
    },
    "homePts": "31",
    "homeWinProb": "0.6835811941745135",
    "id": "10",
    "result": "HOME",
    "week": "1",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "24",
    "date": 2002-09-15T04:00:00.000Z,
    "home": Object {
      "abbrev": "SEA",
      "color": "002A5C",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "homePts": "13",
    "homeWinProb": "0.7238725878948057",
    "id": "28",
    "result": "AWAY",
    "week": "2",
  },
  Object {
    "away": Object {
      "abbrev": "SD",
      "color": "0080C6",
      "conference": "AFC",
      "division": "West",
      "id": "sdg",
      "location": "San Diego",
      "name": "Chargers",
    },
    "awayPts": "23",
    "date": 2002-09-22T04:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "15",
    "homeWinProb": "0.3755258819555419",
    "id": "40",
    "result": "AWAY",
    "week": "3",
  },
  Object {
    "away": Object {
      "abbrev": "NYG",
      "color": "003C7F",
      "conference": "NFC",
      "division": "East",
      "id": "nyg",
      "location": "New York",
      "name": "Giants",
    },
    "awayPts": "7",
    "date": 2002-09-29T04:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "21",
    "homeWinProb": "0.3403121341815819",
    "id": "55",
    "result": "AWAY",
    "week": "4",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "16",
    "date": 2002-10-06T04:00:00.000Z,
    "home": Object {
      "abbrev": "CAR",
      "color": "0099D8",
      "conference": "NFC",
      "division": "South",
      "id": "car",
      "location": "Carolina",
      "name": "Panthers",
    },
    "homePts": "13",
    "homeWinProb": "0.7115705199899836",
    "id": "62",
    "result": "AWAY",
    "week": "5",
  },
  Object {
    "away": Object {
      "abbrev": "DAL",
      "color": "002A5C",
      "conference": "NFC",
      "division": "East",
      "id": "dal",
      "location": "Dallas",
      "name": "Cowboys",
    },
    "awayPts": "6",
    "date": 2002-10-20T04:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "9",
    "homeWinProb": "0.5733863589261132",
    "id": "99",
    "result": "HOME",
    "week": "7",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "28",
    "date": 2002-10-27T04:00:00.000Z,
    "home": Object {
      "abbrev": "SF",
      "color": "C9243F",
      "conference": "NFC",
      "division": "West",
      "id": "sfo",
      "location": "San Francisco",
      "name": "49ers",
    },
    "homePts": "38",
    "homeWinProb": "0.7916266098766414",
    "id": "112",
    "result": "HOME",
    "week": "8",
  },
  Object {
    "away": Object {
      "abbrev": "STL",
      "color": "002960",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "awayPts": "27",
    "date": 2002-11-03T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "14",
    "homeWinProb": "0.4306967765414421",
    "id": "128",
    "result": "AWAY",
    "week": "9",
  },
  Object {
    "away": Object {
      "abbrev": "SEA",
      "color": "002A5C",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "awayPts": "27",
    "date": 2002-11-10T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "6",
    "homeWinProb": "0.411808901854277",
    "id": "140",
    "result": "HOME",
    "week": "10",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "14",
    "date": 2002-11-17T05:00:00.000Z,
    "home": Object {
      "abbrev": "PHI",
      "color": "004C54",
      "conference": "NFC",
      "division": "East",
      "id": "phi",
      "location": "Philadelphia",
      "name": "Eagles",
    },
    "homePts": "38",
    "homeWinProb": "0.8844802467010212",
    "id": "150",
    "result": "HOME",
    "week": "11",
  },
  Object {
    "away": Object {
      "abbrev": "OAK",
      "color": "000000",
      "conference": "AFC",
      "division": "West",
      "id": "rai",
      "location": "Oakland",
      "name": "Raiders",
    },
    "awayPts": "41",
    "date": 2002-11-24T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "20",
    "homeWinProb": "0.17748001515081524",
    "id": "171",
    "result": "AWAY",
    "week": "12",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "0",
    "date": 2002-12-01T05:00:00.000Z,
    "home": Object {
      "abbrev": "KC",
      "color": "E31837",
      "conference": "AFC",
      "division": "West",
      "id": "kan",
      "location": "Kansas City",
      "name": "Chiefs",
    },
    "homePts": "49",
    "homeWinProb": "0.8132915369160614",
    "id": "180",
    "result": "HOME",
    "week": "13",
  },
  Object {
    "away": Object {
      "abbrev": "DET",
      "color": "0076B6",
      "conference": "NFC",
      "division": "North",
      "id": "det",
      "location": "Detroit",
      "name": "Lions",
    },
    "awayPts": "20",
    "date": 2002-12-08T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "23",
    "homeWinProb": "0.6270081417880935",
    "id": "204",
    "result": "HOME",
    "week": "14",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "28",
    "date": 2002-12-15T05:00:00.000Z,
    "home": Object {
      "abbrev": "STL",
      "color": "002960",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "homePts": "30",
    "homeWinProb": "0.7074982929511003",
    "id": "223",
    "result": "HOME",
    "week": "15",
  },
  Object {
    "away": Object {
      "abbrev": "SF",
      "color": "C9243F",
      "conference": "NFC",
      "division": "West",
      "id": "sfo",
      "location": "San Francisco",
      "name": "49ers",
    },
    "awayPts": "17",
    "date": 2002-12-21T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "14",
    "homeWinProb": "0.3297557673714104",
    "id": "226",
    "result": "AWAY",
    "week": "16",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "7",
    "date": 2002-12-29T05:00:00.000Z,
    "home": Object {
      "abbrev": "DEN",
      "color": "F26522",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "homePts": "37",
    "homeWinProb": "0.8308935946375958",
    "id": "254",
    "result": "AWAY",
    "week": "17",
  },
]
`;

exports[`ScheduleFilters finds all games involving one or more teams 2`] = `
Array [
  Object {
    "away": Object {
      "abbrev": "BAL",
      "color": "2D2D8B",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "awayPts": "7",
    "date": 2002-09-08T04:00:00.000Z,
    "home": Object {
      "abbrev": "CAR",
      "color": "0099D8",
      "conference": "NFC",
      "division": "South",
      "id": "car",
      "location": "Carolina",
      "name": "Panthers",
    },
    "homePts": "10",
    "homeWinProb": "0.5678431397601252",
    "id": "2",
    "result": "AWAY",
    "week": "1",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "23",
    "date": 2002-09-08T04:00:00.000Z,
    "home": Object {
      "abbrev": "WAS",
      "color": "681D13",
      "conference": "NFC",
      "division": "East",
      "id": "was",
      "location": "Washington",
      "name": "Redskins",
    },
    "homePts": "31",
    "homeWinProb": "0.6835811941745135",
    "id": "10",
    "result": "HOME",
    "week": "1",
  },
  Object {
    "away": Object {
      "abbrev": "TB",
      "color": "A30C2D",
      "conference": "NFC",
      "division": "South",
      "id": "tam",
      "location": "Tampa Bay",
      "name": "Buccaneers",
    },
    "awayPts": "25",
    "date": 2002-09-15T04:00:00.000Z,
    "home": Object {
      "abbrev": "BAL",
      "color": "2D2D8B",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "homePts": "0",
    "homeWinProb": "0.23922312009635638",
    "id": "19",
    "result": "AWAY",
    "week": "2",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "24",
    "date": 2002-09-15T04:00:00.000Z,
    "home": Object {
      "abbrev": "SEA",
      "color": "002A5C",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "homePts": "13",
    "homeWinProb": "0.7238725878948057",
    "id": "28",
    "result": "AWAY",
    "week": "2",
  },
  Object {
    "away": Object {
      "abbrev": "SD",
      "color": "0080C6",
      "conference": "AFC",
      "division": "West",
      "id": "sdg",
      "location": "San Diego",
      "name": "Chargers",
    },
    "awayPts": "23",
    "date": 2002-09-22T04:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "15",
    "homeWinProb": "0.3755258819555419",
    "id": "40",
    "result": "AWAY",
    "week": "3",
  },
  Object {
    "away": Object {
      "abbrev": "NYG",
      "color": "003C7F",
      "conference": "NFC",
      "division": "East",
      "id": "nyg",
      "location": "New York",
      "name": "Giants",
    },
    "awayPts": "7",
    "date": 2002-09-29T04:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "21",
    "homeWinProb": "0.3403121341815819",
    "id": "55",
    "result": "AWAY",
    "week": "4",
  },
  Object {
    "away": Object {
      "abbrev": "DEN",
      "color": "F26522",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "awayPts": "23",
    "date": 2002-09-30T04:00:00.000Z,
    "home": Object {
      "abbrev": "BAL",
      "color": "2D2D8B",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "homePts": "34",
    "homeWinProb": "0.4210848794898792",
    "id": "60",
    "result": "HOME",
    "week": "4",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "16",
    "date": 2002-10-06T04:00:00.000Z,
    "home": Object {
      "abbrev": "CAR",
      "color": "0099D8",
      "conference": "NFC",
      "division": "South",
      "id": "car",
      "location": "Carolina",
      "name": "Panthers",
    },
    "homePts": "13",
    "homeWinProb": "0.7115705199899836",
    "id": "62",
    "result": "AWAY",
    "week": "5",
  },
  Object {
    "away": Object {
      "abbrev": "BAL",
      "color": "2D2D8B",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "awayPts": "26",
    "date": 2002-10-06T04:00:00.000Z,
    "home": Object {
      "abbrev": "CLE",
      "color": "FF3D00",
      "conference": "AFC",
      "division": "North",
      "id": "cle",
      "location": "Cleveland",
      "name": "Browns",
    },
    "homePts": "21",
    "homeWinProb": "0.6539507351709601",
    "id": "73",
    "result": "AWAY",
    "week": "5",
  },
  Object {
    "away": Object {
      "abbrev": "BAL",
      "color": "2D2D8B",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "awayPts": "20",
    "date": 2002-10-13T04:00:00.000Z,
    "home": Object {
      "abbrev": "IND",
      "color": "003A70",
      "conference": "AFC",
      "division": "South",
      "id": "clt",
      "location": "Indianapolis",
      "name": "Colts",
    },
    "homePts": "22",
    "homeWinProb": "0.6365307966323591",
    "id": "75",
    "result": "HOME",
    "week": "6",
  },
  Object {
    "away": Object {
      "abbrev": "JAX",
      "color": "016576",
      "conference": "AFC",
      "division": "South",
      "id": "jax",
      "location": "Jacksonville",
      "name": "Jaguars",
    },
    "awayPts": "10",
    "date": 2002-10-20T04:00:00.000Z,
    "home": Object {
      "abbrev": "BAL",
      "color": "2D2D8B",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "homePts": "17",
    "homeWinProb": "0.6008645107638122",
    "id": "90",
    "result": "HOME",
    "week": "7",
  },
  Object {
    "away": Object {
      "abbrev": "DAL",
      "color": "002A5C",
      "conference": "NFC",
      "division": "East",
      "id": "dal",
      "location": "Dallas",
      "name": "Cowboys",
    },
    "awayPts": "6",
    "date": 2002-10-20T04:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "9",
    "homeWinProb": "0.5733863589261132",
    "id": "99",
    "result": "HOME",
    "week": "7",
  },
  Object {
    "away": Object {
      "abbrev": "PIT",
      "color": "FEC20C",
      "conference": "AFC",
      "division": "North",
      "id": "pit",
      "location": "Pittsburgh",
      "name": "Steelers",
    },
    "awayPts": "31",
    "date": 2002-10-27T04:00:00.000Z,
    "home": Object {
      "abbrev": "BAL",
      "color": "2D2D8B",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "homePts": "18",
    "homeWinProb": "0.4271964754891833",
    "id": "108",
    "result": "AWAY",
    "week": "8",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "28",
    "date": 2002-10-27T04:00:00.000Z,
    "home": Object {
      "abbrev": "SF",
      "color": "C9243F",
      "conference": "NFC",
      "division": "West",
      "id": "sfo",
      "location": "San Francisco",
      "name": "49ers",
    },
    "homePts": "38",
    "homeWinProb": "0.7916266098766414",
    "id": "112",
    "result": "HOME",
    "week": "8",
  },
  Object {
    "away": Object {
      "abbrev": "BAL",
      "color": "2D2D8B",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "awayPts": "17",
    "date": 2002-11-03T05:00:00.000Z,
    "home": Object {
      "abbrev": "ATL",
      "color": "C9243F",
      "conference": "NFC",
      "division": "South",
      "id": "atl",
      "location": "Atlanta",
      "name": "Falcons",
    },
    "homePts": "20",
    "homeWinProb": "0.7388183062022791",
    "id": "124",
    "result": "HOME",
    "week": "9",
  },
  Object {
    "away": Object {
      "abbrev": "STL",
      "color": "002960",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "awayPts": "27",
    "date": 2002-11-03T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "14",
    "homeWinProb": "0.4306967765414421",
    "id": "128",
    "result": "AWAY",
    "week": "9",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "27",
    "date": 2002-11-10T05:00:00.000Z,
    "home": Object {
      "abbrev": "BAL",
      "color": "2D2D8B",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "homePts": "38",
    "homeWinProb": "0.7979630654180474",
    "id": "134",
    "result": "HOME",
    "week": "10",
  },
  Object {
    "away": Object {
      "abbrev": "SEA",
      "color": "002A5C",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "awayPts": "27",
    "date": 2002-11-10T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "6",
    "homeWinProb": "0.411808901854277",
    "id": "140",
    "result": "HOME",
    "week": "10",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "14",
    "date": 2002-11-17T05:00:00.000Z,
    "home": Object {
      "abbrev": "PHI",
      "color": "004C54",
      "conference": "NFC",
      "division": "East",
      "id": "phi",
      "location": "Philadelphia",
      "name": "Eagles",
    },
    "homePts": "38",
    "homeWinProb": "0.8844802467010212",
    "id": "150",
    "result": "HOME",
    "week": "11",
  },
  Object {
    "away": Object {
      "abbrev": "BAL",
      "color": "2D2D8B",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "awayPts": "7",
    "date": 2002-11-17T05:00:00.000Z,
    "home": Object {
      "abbrev": "MIA",
      "color": "038E97",
      "conference": "AFC",
      "division": "East",
      "id": "mia",
      "location": "Miami",
      "name": "Dolphins",
    },
    "homePts": "26",
    "homeWinProb": "0.7261038347597145",
    "id": "157",
    "result": "AWAY",
    "week": "11",
  },
  Object {
    "away": Object {
      "abbrev": "TEN",
      "color": "002A5C",
      "conference": "AFC",
      "division": "South",
      "id": "oti",
      "location": "Tennessee",
      "name": "Titans",
    },
    "awayPts": "12",
    "date": 2002-11-24T05:00:00.000Z,
    "home": Object {
      "abbrev": "BAL",
      "color": "2D2D8B",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "homePts": "13",
    "homeWinProb": "0.4406430107409355",
    "id": "164",
    "result": "HOME",
    "week": "12",
  },
  Object {
    "away": Object {
      "abbrev": "OAK",
      "color": "000000",
      "conference": "AFC",
      "division": "West",
      "id": "rai",
      "location": "Oakland",
      "name": "Raiders",
    },
    "awayPts": "41",
    "date": 2002-11-24T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "20",
    "homeWinProb": "0.17748001515081524",
    "id": "171",
    "result": "AWAY",
    "week": "12",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "0",
    "date": 2002-12-01T05:00:00.000Z,
    "home": Object {
      "abbrev": "KC",
      "color": "E31837",
      "conference": "AFC",
      "division": "West",
      "id": "kan",
      "location": "Kansas City",
      "name": "Chiefs",
    },
    "homePts": "49",
    "homeWinProb": "0.8132915369160614",
    "id": "180",
    "result": "HOME",
    "week": "13",
  },
  Object {
    "away": Object {
      "abbrev": "BAL",
      "color": "2D2D8B",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "awayPts": "27",
    "date": 2002-12-01T05:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "23",
    "homeWinProb": "0.3217262340799386",
    "id": "183",
    "result": "AWAY",
    "week": "13",
  },
  Object {
    "away": Object {
      "abbrev": "NO",
      "color": "9F8958",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "awayPts": "37",
    "date": 2002-12-08T05:00:00.000Z,
    "home": Object {
      "abbrev": "BAL",
      "color": "2D2D8B",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "homePts": "25",
    "homeWinProb": "0.45592547805662453",
    "id": "203",
    "result": "AWAY",
    "week": "14",
  },
  Object {
    "away": Object {
      "abbrev": "DET",
      "color": "0076B6",
      "conference": "NFC",
      "division": "North",
      "id": "det",
      "location": "Detroit",
      "name": "Lions",
    },
    "awayPts": "20",
    "date": 2002-12-08T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "23",
    "homeWinProb": "0.6270081417880935",
    "id": "204",
    "result": "HOME",
    "week": "14",
  },
  Object {
    "away": Object {
      "abbrev": "BAL",
      "color": "2D2D8B",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "awayPts": "23",
    "date": 2002-12-15T05:00:00.000Z,
    "home": Object {
      "abbrev": "HOU",
      "color": "00143F",
      "conference": "AFC",
      "division": "South",
      "id": "htx",
      "location": "Houston",
      "name": "Texans",
    },
    "homePts": "19",
    "homeWinProb": "0.3746806044066682",
    "id": "213",
    "result": "AWAY",
    "week": "15",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "28",
    "date": 2002-12-15T05:00:00.000Z,
    "home": Object {
      "abbrev": "STL",
      "color": "002960",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "homePts": "30",
    "homeWinProb": "0.7074982929511003",
    "id": "223",
    "result": "HOME",
    "week": "15",
  },
  Object {
    "away": Object {
      "abbrev": "SF",
      "color": "C9243F",
      "conference": "NFC",
      "division": "West",
      "id": "sfo",
      "location": "San Francisco",
      "name": "49ers",
    },
    "awayPts": "17",
    "date": 2002-12-21T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "14",
    "homeWinProb": "0.3297557673714104",
    "id": "226",
    "result": "AWAY",
    "week": "16",
  },
  Object {
    "away": Object {
      "abbrev": "CLE",
      "color": "FF3D00",
      "conference": "AFC",
      "division": "North",
      "id": "cle",
      "location": "Cleveland",
      "name": "Browns",
    },
    "awayPts": "14",
    "date": 2002-12-22T05:00:00.000Z,
    "home": Object {
      "abbrev": "BAL",
      "color": "2D2D8B",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "homePts": "13",
    "homeWinProb": "0.49021956611443823",
    "id": "237",
    "result": "AWAY",
    "week": "16",
  },
  Object {
    "away": Object {
      "abbrev": "BAL",
      "color": "2D2D8B",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "awayPts": "31",
    "date": 2002-12-29T05:00:00.000Z,
    "home": Object {
      "abbrev": "PIT",
      "color": "FEC20C",
      "conference": "AFC",
      "division": "North",
      "id": "pit",
      "location": "Pittsburgh",
      "name": "Steelers",
    },
    "homePts": "34",
    "homeWinProb": "0.7105549716832525",
    "id": "245",
    "result": "HOME",
    "week": "17",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "7",
    "date": 2002-12-29T05:00:00.000Z,
    "home": Object {
      "abbrev": "DEN",
      "color": "F26522",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "homePts": "37",
    "homeWinProb": "0.8308935946375958",
    "id": "254",
    "result": "AWAY",
    "week": "17",
  },
]
`;

exports[`ScheduleFilters finds the common games between two or more teams 1`] = `
Array [
  Object {
    "away": Object {
      "abbrev": "DEN",
      "color": "F26522",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "awayPts": "24",
    "date": 2002-09-15T04:00:00.000Z,
    "home": Object {
      "abbrev": "SF",
      "color": "C9243F",
      "conference": "NFC",
      "division": "West",
      "id": "sfo",
      "location": "San Francisco",
      "name": "49ers",
    },
    "homePts": "14",
    "homeWinProb": "0.5160016568085074",
    "id": "27",
    "result": "AWAY",
    "week": "2",
  },
  Object {
    "away": Object {
      "abbrev": "SD",
      "color": "0080C6",
      "conference": "AFC",
      "division": "West",
      "id": "sdg",
      "location": "San Diego",
      "name": "Chargers",
    },
    "awayPts": "9",
    "date": 2002-10-06T04:00:00.000Z,
    "home": Object {
      "abbrev": "DEN",
      "color": "F26522",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "homePts": "26",
    "homeWinProb": "0.6753390073297062",
    "id": "69",
    "result": "AWAY",
    "week": "5",
  },
  Object {
    "away": Object {
      "abbrev": "STL",
      "color": "002960",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "awayPts": "13",
    "date": 2002-10-06T04:00:00.000Z,
    "home": Object {
      "abbrev": "SF",
      "color": "C9243F",
      "conference": "NFC",
      "division": "West",
      "id": "sfo",
      "location": "San Francisco",
      "name": "49ers",
    },
    "homePts": "37",
    "homeWinProb": "0.6742691051658665",
    "id": "72",
    "result": "HOME",
    "week": "5",
  },
  Object {
    "away": Object {
      "abbrev": "OAK",
      "color": "000000",
      "conference": "AFC",
      "division": "West",
      "id": "rai",
      "location": "Oakland",
      "name": "Raiders",
    },
    "awayPts": "13",
    "date": 2002-10-13T04:00:00.000Z,
    "home": Object {
      "abbrev": "STL",
      "color": "002960",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "homePts": "28",
    "homeWinProb": "0.2861506578955006",
    "id": "86",
    "result": "HOME",
    "week": "6",
  },
  Object {
    "away": Object {
      "abbrev": "DEN",
      "color": "F26522",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "awayPts": "37",
    "date": 2002-10-20T04:00:00.000Z,
    "home": Object {
      "abbrev": "KC",
      "color": "E31837",
      "conference": "AFC",
      "division": "West",
      "id": "kan",
      "location": "Kansas City",
      "name": "Chiefs",
    },
    "homePts": "34",
    "homeWinProb": "0.547019241080742",
    "id": "89",
    "result": "AWAY",
    "week": "7",
  },
  Object {
    "away": Object {
      "abbrev": "SEA",
      "color": "002A5C",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "awayPts": "20",
    "date": 2002-10-20T04:00:00.000Z,
    "home": Object {
      "abbrev": "STL",
      "color": "002960",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "homePts": "37",
    "homeWinProb": "0.5546630210171175",
    "id": "91",
    "result": "HOME",
    "week": "7",
  },
  Object {
    "away": Object {
      "abbrev": "STL",
      "color": "002960",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "awayPts": "27",
    "date": 2002-11-03T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "14",
    "homeWinProb": "0.4306967765414421",
    "id": "128",
    "result": "AWAY",
    "week": "9",
  },
  Object {
    "away": Object {
      "abbrev": "SD",
      "color": "0080C6",
      "conference": "AFC",
      "division": "West",
      "id": "sdg",
      "location": "San Diego",
      "name": "Chargers",
    },
    "awayPts": "24",
    "date": 2002-11-10T05:00:00.000Z,
    "home": Object {
      "abbrev": "STL",
      "color": "002960",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "homePts": "28",
    "homeWinProb": "0.5171862564949017",
    "id": "135",
    "result": "HOME",
    "week": "10",
  },
  Object {
    "away": Object {
      "abbrev": "OAK",
      "color": "000000",
      "conference": "AFC",
      "division": "West",
      "id": "rai",
      "location": "Oakland",
      "name": "Raiders",
    },
    "awayPts": "34",
    "date": 2002-11-11T05:00:00.000Z,
    "home": Object {
      "abbrev": "DEN",
      "color": "F26522",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "homePts": "10",
    "homeWinProb": "0.4391778226433783",
    "id": "144",
    "result": "AWAY",
    "week": "10",
  },
  Object {
    "away": Object {
      "abbrev": "DEN",
      "color": "F26522",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "awayPts": "31",
    "date": 2002-11-17T05:00:00.000Z,
    "home": Object {
      "abbrev": "SEA",
      "color": "002A5C",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "homePts": "9",
    "homeWinProb": "0.42952939029595405",
    "id": "156",
    "result": "HOME",
    "week": "11",
  },
  Object {
    "away": Object {
      "abbrev": "DEN",
      "color": "F26522",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "awayPts": "27",
    "date": 2002-12-01T05:00:00.000Z,
    "home": Object {
      "abbrev": "SD",
      "color": "0080C6",
      "conference": "AFC",
      "division": "West",
      "id": "sdg",
      "location": "San Diego",
      "name": "Chargers",
    },
    "homePts": "30",
    "homeWinProb": "0.4668407474978823",
    "id": "188",
    "result": "HOME",
    "week": "13",
  },
  Object {
    "away": Object {
      "abbrev": "STL",
      "color": "002960",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "awayPts": "10",
    "date": 2002-12-08T05:00:00.000Z,
    "home": Object {
      "abbrev": "KC",
      "color": "E31837",
      "conference": "AFC",
      "division": "West",
      "id": "kan",
      "location": "Kansas City",
      "name": "Chiefs",
    },
    "homePts": "49",
    "homeWinProb": "0.7018557593977597",
    "id": "193",
    "result": "HOME",
    "week": "14",
  },
  Object {
    "away": Object {
      "abbrev": "KC",
      "color": "E31837",
      "conference": "AFC",
      "division": "West",
      "id": "kan",
      "location": "Kansas City",
      "name": "Chiefs",
    },
    "awayPts": "24",
    "date": 2002-12-15T05:00:00.000Z,
    "home": Object {
      "abbrev": "DEN",
      "color": "F26522",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "homePts": "31",
    "homeWinProb": "0.6000036212723125",
    "id": "220",
    "result": "HOME",
    "week": "15",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "28",
    "date": 2002-12-15T05:00:00.000Z,
    "home": Object {
      "abbrev": "STL",
      "color": "002960",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "homePts": "30",
    "homeWinProb": "0.7074982929511003",
    "id": "223",
    "result": "HOME",
    "week": "15",
  },
  Object {
    "away": Object {
      "abbrev": "STL",
      "color": "002960",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "awayPts": "10",
    "date": 2002-12-22T05:00:00.000Z,
    "home": Object {
      "abbrev": "SEA",
      "color": "002A5C",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "homePts": "30",
    "homeWinProb": "0.5925226388401105",
    "id": "236",
    "result": "HOME",
    "week": "16",
  },
  Object {
    "away": Object {
      "abbrev": "DEN",
      "color": "F26522",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "awayPts": "16",
    "date": 2002-12-22T05:00:00.000Z,
    "home": Object {
      "abbrev": "OAK",
      "color": "000000",
      "conference": "AFC",
      "division": "West",
      "id": "rai",
      "location": "Oakland",
      "name": "Raiders",
    },
    "homePts": "28",
    "homeWinProb": "0.7000500653254397",
    "id": "238",
    "result": "HOME",
    "week": "16",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "7",
    "date": 2002-12-29T05:00:00.000Z,
    "home": Object {
      "abbrev": "DEN",
      "color": "F26522",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "homePts": "37",
    "homeWinProb": "0.8308935946375958",
    "id": "254",
    "result": "AWAY",
    "week": "17",
  },
  Object {
    "away": Object {
      "abbrev": "SF",
      "color": "C9243F",
      "conference": "NFC",
      "division": "West",
      "id": "sfo",
      "location": "San Francisco",
      "name": "49ers",
    },
    "awayPts": "20",
    "date": 2002-12-30T05:00:00.000Z,
    "home": Object {
      "abbrev": "STL",
      "color": "002960",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "homePts": "31",
    "homeWinProb": "0.4680224199273576",
    "id": "256",
    "result": "HOME",
    "week": "17",
  },
]
`;

exports[`ScheduleFilters finds the common games between two or more teams 2`] = `
Array [
  Object {
    "away": Object {
      "abbrev": "JAX",
      "color": "016576",
      "conference": "AFC",
      "division": "South",
      "id": "jax",
      "location": "Jacksonville",
      "name": "Jaguars",
    },
    "awayPts": "23",
    "date": 2002-09-15T04:00:00.000Z,
    "home": Object {
      "abbrev": "KC",
      "color": "E31837",
      "conference": "AFC",
      "division": "West",
      "id": "kan",
      "location": "Kansas City",
      "name": "Chiefs",
    },
    "homePts": "16",
    "homeWinProb": "0.7166228992613677",
    "id": "17",
    "result": "AWAY",
    "week": "2",
  },
  Object {
    "away": Object {
      "abbrev": "DEN",
      "color": "F26522",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "awayPts": "37",
    "date": 2002-10-20T04:00:00.000Z,
    "home": Object {
      "abbrev": "KC",
      "color": "E31837",
      "conference": "AFC",
      "division": "West",
      "id": "kan",
      "location": "Kansas City",
      "name": "Chiefs",
    },
    "homePts": "34",
    "homeWinProb": "0.547019241080742",
    "id": "89",
    "result": "AWAY",
    "week": "7",
  },
  Object {
    "away": Object {
      "abbrev": "STL",
      "color": "002960",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "awayPts": "10",
    "date": 2002-12-08T05:00:00.000Z,
    "home": Object {
      "abbrev": "KC",
      "color": "E31837",
      "conference": "AFC",
      "division": "West",
      "id": "kan",
      "location": "Kansas City",
      "name": "Chiefs",
    },
    "homePts": "49",
    "homeWinProb": "0.7018557593977597",
    "id": "193",
    "result": "HOME",
    "week": "14",
  },
  Object {
    "away": Object {
      "abbrev": "KC",
      "color": "E31837",
      "conference": "AFC",
      "division": "West",
      "id": "kan",
      "location": "Kansas City",
      "name": "Chiefs",
    },
    "awayPts": "24",
    "date": 2002-12-15T05:00:00.000Z,
    "home": Object {
      "abbrev": "DEN",
      "color": "F26522",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "homePts": "31",
    "homeWinProb": "0.6000036212723125",
    "id": "220",
    "result": "HOME",
    "week": "15",
  },
]
`;

exports[`ScheduleFilters finds the conference games of one or more teams 1`] = `
Array [
  Object {
    "away": Object {
      "abbrev": "SD",
      "color": "0080C6",
      "conference": "AFC",
      "division": "West",
      "id": "sdg",
      "location": "San Diego",
      "name": "Chargers",
    },
    "awayPts": "34",
    "date": 2002-09-08T04:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "6",
    "homeWinProb": "0.2813680979019828",
    "id": "8",
    "result": "HOME",
    "week": "1",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "7",
    "date": 2002-09-15T04:00:00.000Z,
    "home": Object {
      "abbrev": "CLE",
      "color": "FF3D00",
      "conference": "AFC",
      "division": "North",
      "id": "cle",
      "location": "Cleveland",
      "name": "Browns",
    },
    "homePts": "20",
    "homeWinProb": "0.8519032899079775",
    "id": "21",
    "result": "AWAY",
    "week": "2",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "21",
    "date": 2002-10-06T04:00:00.000Z,
    "home": Object {
      "abbrev": "IND",
      "color": "003A70",
      "conference": "AFC",
      "division": "South",
      "id": "clt",
      "location": "Indianapolis",
      "name": "Colts",
    },
    "homePts": "28",
    "homeWinProb": "0.8408175127977595",
    "id": "61",
    "result": "HOME",
    "week": "5",
  },
  Object {
    "away": Object {
      "abbrev": "PIT",
      "color": "FEC20C",
      "conference": "AFC",
      "division": "North",
      "id": "pit",
      "location": "Pittsburgh",
      "name": "Steelers",
    },
    "awayPts": "34",
    "date": 2002-10-13T04:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "7",
    "homeWinProb": "0.20266534213255388",
    "id": "79",
    "result": "HOME",
    "week": "6",
  },
  Object {
    "away": Object {
      "abbrev": "TEN",
      "color": "002A5C",
      "conference": "AFC",
      "division": "South",
      "id": "oti",
      "location": "Tennessee",
      "name": "Titans",
    },
    "awayPts": "30",
    "date": 2002-10-27T04:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "24",
    "homeWinProb": "0.21244640859407699",
    "id": "105",
    "result": "AWAY",
    "week": "8",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "38",
    "date": 2002-11-03T05:00:00.000Z,
    "home": Object {
      "abbrev": "HOU",
      "color": "00143F",
      "conference": "AFC",
      "division": "South",
      "id": "htx",
      "location": "Houston",
      "name": "Texans",
    },
    "homePts": "3",
    "homeWinProb": "0.6289752635707547",
    "id": "119",
    "result": "AWAY",
    "week": "9",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "27",
    "date": 2002-11-10T05:00:00.000Z,
    "home": Object {
      "abbrev": "BAL",
      "color": "2D2D8B",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "homePts": "38",
    "homeWinProb": "0.7979630654180474",
    "id": "134",
    "result": "HOME",
    "week": "10",
  },
  Object {
    "away": Object {
      "abbrev": "CLE",
      "color": "FF3D00",
      "conference": "AFC",
      "division": "North",
      "id": "cle",
      "location": "Cleveland",
      "name": "Browns",
    },
    "awayPts": "27",
    "date": 2002-11-17T05:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "20",
    "homeWinProb": "0.2504288886212816",
    "id": "148",
    "result": "AWAY",
    "week": "11",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "21",
    "date": 2002-11-24T05:00:00.000Z,
    "home": Object {
      "abbrev": "PIT",
      "color": "FEC20C",
      "conference": "AFC",
      "division": "North",
      "id": "pit",
      "location": "Pittsburgh",
      "name": "Steelers",
    },
    "homePts": "29",
    "homeWinProb": "0.8856335500711818",
    "id": "162",
    "result": "HOME",
    "week": "12",
  },
  Object {
    "away": Object {
      "abbrev": "BAL",
      "color": "2D2D8B",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "awayPts": "27",
    "date": 2002-12-01T05:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "23",
    "homeWinProb": "0.3217262340799386",
    "id": "183",
    "result": "AWAY",
    "week": "13",
  },
  Object {
    "away": Object {
      "abbrev": "JAX",
      "color": "016576",
      "conference": "AFC",
      "division": "South",
      "id": "jax",
      "location": "Jacksonville",
      "name": "Jaguars",
    },
    "awayPts": "29",
    "date": 2002-12-15T05:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "15",
    "homeWinProb": "0.34714611924350797",
    "id": "215",
    "result": "AWAY",
    "week": "15",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "9",
    "date": 2002-12-29T05:00:00.000Z,
    "home": Object {
      "abbrev": "BUF",
      "color": "005496",
      "conference": "AFC",
      "division": "East",
      "id": "buf",
      "location": "Buffalo",
      "name": "Bills",
    },
    "homePts": "27",
    "homeWinProb": "0.8257857846564032",
    "id": "243",
    "result": "AWAY",
    "week": "17",
  },
]
`;

exports[`ScheduleFilters finds the conference games of one or more teams 2`] = `
Array [
  Object {
    "away": Object {
      "abbrev": "SD",
      "color": "0080C6",
      "conference": "AFC",
      "division": "West",
      "id": "sdg",
      "location": "San Diego",
      "name": "Chargers",
    },
    "awayPts": "34",
    "date": 2002-09-08T04:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "6",
    "homeWinProb": "0.2813680979019828",
    "id": "8",
    "result": "HOME",
    "week": "1",
  },
  Object {
    "away": Object {
      "abbrev": "NO",
      "color": "9F8958",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "awayPts": "26",
    "date": 2002-09-08T04:00:00.000Z,
    "home": Object {
      "abbrev": "TB",
      "color": "A30C2D",
      "conference": "NFC",
      "division": "South",
      "id": "tam",
      "location": "Tampa Bay",
      "name": "Buccaneers",
    },
    "homePts": "20",
    "homeWinProb": "0.7834344337011173",
    "id": "12",
    "result": "AWAY",
    "week": "1",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "7",
    "date": 2002-09-15T04:00:00.000Z,
    "home": Object {
      "abbrev": "CLE",
      "color": "FF3D00",
      "conference": "AFC",
      "division": "North",
      "id": "cle",
      "location": "Cleveland",
      "name": "Browns",
    },
    "homePts": "20",
    "homeWinProb": "0.8519032899079775",
    "id": "21",
    "result": "AWAY",
    "week": "2",
  },
  Object {
    "away": Object {
      "abbrev": "GB",
      "color": "294339",
      "conference": "NFC",
      "division": "North",
      "id": "gnb",
      "location": "Green Bay",
      "name": "Packers",
    },
    "awayPts": "20",
    "date": 2002-09-15T04:00:00.000Z,
    "home": Object {
      "abbrev": "NO",
      "color": "9F8958",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "homePts": "35",
    "homeWinProb": "0.5272481758369679",
    "id": "25",
    "result": "HOME",
    "week": "2",
  },
  Object {
    "away": Object {
      "abbrev": "NO",
      "color": "9F8958",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "awayPts": "29",
    "date": 2002-09-22T04:00:00.000Z,
    "home": Object {
      "abbrev": "CHI",
      "color": "00143F",
      "conference": "NFC",
      "division": "North",
      "id": "chi",
      "location": "Chicago",
      "name": "Bears",
    },
    "homePts": "23",
    "homeWinProb": "0.3411295027213326",
    "id": "39",
    "result": "AWAY",
    "week": "3",
  },
  Object {
    "away": Object {
      "abbrev": "NO",
      "color": "9F8958",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "awayPts": "21",
    "date": 2002-09-29T04:00:00.000Z,
    "home": Object {
      "abbrev": "DET",
      "color": "0076B6",
      "conference": "NFC",
      "division": "North",
      "id": "det",
      "location": "Detroit",
      "name": "Lions",
    },
    "homePts": "26",
    "homeWinProb": "0.2623909294834977",
    "id": "53",
    "result": "HOME",
    "week": "4",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "21",
    "date": 2002-10-06T04:00:00.000Z,
    "home": Object {
      "abbrev": "IND",
      "color": "003A70",
      "conference": "AFC",
      "division": "South",
      "id": "clt",
      "location": "Indianapolis",
      "name": "Colts",
    },
    "homePts": "28",
    "homeWinProb": "0.8408175127977595",
    "id": "61",
    "result": "HOME",
    "week": "5",
  },
  Object {
    "away": Object {
      "abbrev": "NO",
      "color": "9F8958",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "awayPts": "43",
    "date": 2002-10-13T04:00:00.000Z,
    "home": Object {
      "abbrev": "WAS",
      "color": "681D13",
      "conference": "NFC",
      "division": "East",
      "id": "was",
      "location": "Washington",
      "name": "Redskins",
    },
    "homePts": "27",
    "homeWinProb": "0.4184713442695734",
    "id": "77",
    "result": "AWAY",
    "week": "6",
  },
  Object {
    "away": Object {
      "abbrev": "PIT",
      "color": "FEC20C",
      "conference": "AFC",
      "division": "North",
      "id": "pit",
      "location": "Pittsburgh",
      "name": "Steelers",
    },
    "awayPts": "34",
    "date": 2002-10-13T04:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "7",
    "homeWinProb": "0.20266534213255388",
    "id": "79",
    "result": "HOME",
    "week": "6",
  },
  Object {
    "away": Object {
      "abbrev": "SF",
      "color": "C9243F",
      "conference": "NFC",
      "division": "West",
      "id": "sfo",
      "location": "San Francisco",
      "name": "49ers",
    },
    "awayPts": "27",
    "date": 2002-10-20T04:00:00.000Z,
    "home": Object {
      "abbrev": "NO",
      "color": "9F8958",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "homePts": "35",
    "homeWinProb": "0.5959797719036295",
    "id": "93",
    "result": "HOME",
    "week": "7",
  },
  Object {
    "away": Object {
      "abbrev": "TEN",
      "color": "002A5C",
      "conference": "AFC",
      "division": "South",
      "id": "oti",
      "location": "Tennessee",
      "name": "Titans",
    },
    "awayPts": "30",
    "date": 2002-10-27T04:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "24",
    "homeWinProb": "0.21244640859407699",
    "id": "105",
    "result": "AWAY",
    "week": "8",
  },
  Object {
    "away": Object {
      "abbrev": "ATL",
      "color": "C9243F",
      "conference": "NFC",
      "division": "South",
      "id": "atl",
      "location": "Atlanta",
      "name": "Falcons",
    },
    "awayPts": "37",
    "date": 2002-10-27T04:00:00.000Z,
    "home": Object {
      "abbrev": "NO",
      "color": "9F8958",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "homePts": "35",
    "homeWinProb": "0.5112619500072619",
    "id": "110",
    "result": "AWAY",
    "week": "8",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "38",
    "date": 2002-11-03T05:00:00.000Z,
    "home": Object {
      "abbrev": "HOU",
      "color": "00143F",
      "conference": "AFC",
      "division": "South",
      "id": "htx",
      "location": "Houston",
      "name": "Texans",
    },
    "homePts": "3",
    "homeWinProb": "0.6289752635707547",
    "id": "119",
    "result": "AWAY",
    "week": "9",
  },
  Object {
    "away": Object {
      "abbrev": "NO",
      "color": "9F8958",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "awayPts": "34",
    "date": 2002-11-10T05:00:00.000Z,
    "home": Object {
      "abbrev": "CAR",
      "color": "0099D8",
      "conference": "NFC",
      "division": "South",
      "id": "car",
      "location": "Carolina",
      "name": "Panthers",
    },
    "homePts": "24",
    "homeWinProb": "0.45003862325098243",
    "id": "133",
    "result": "AWAY",
    "week": "10",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "27",
    "date": 2002-11-10T05:00:00.000Z,
    "home": Object {
      "abbrev": "BAL",
      "color": "2D2D8B",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "homePts": "38",
    "homeWinProb": "0.7979630654180474",
    "id": "134",
    "result": "HOME",
    "week": "10",
  },
  Object {
    "away": Object {
      "abbrev": "CLE",
      "color": "FF3D00",
      "conference": "AFC",
      "division": "North",
      "id": "cle",
      "location": "Cleveland",
      "name": "Browns",
    },
    "awayPts": "27",
    "date": 2002-11-17T05:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "20",
    "homeWinProb": "0.2504288886212816",
    "id": "148",
    "result": "AWAY",
    "week": "11",
  },
  Object {
    "away": Object {
      "abbrev": "NO",
      "color": "9F8958",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "awayPts": "17",
    "date": 2002-11-17T05:00:00.000Z,
    "home": Object {
      "abbrev": "ATL",
      "color": "C9243F",
      "conference": "NFC",
      "division": "South",
      "id": "atl",
      "location": "Atlanta",
      "name": "Falcons",
    },
    "homePts": "24",
    "homeWinProb": "0.6342974984766016",
    "id": "153",
    "result": "HOME",
    "week": "11",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "21",
    "date": 2002-11-24T05:00:00.000Z,
    "home": Object {
      "abbrev": "PIT",
      "color": "FEC20C",
      "conference": "AFC",
      "division": "North",
      "id": "pit",
      "location": "Pittsburgh",
      "name": "Steelers",
    },
    "homePts": "29",
    "homeWinProb": "0.8856335500711818",
    "id": "162",
    "result": "HOME",
    "week": "12",
  },
  Object {
    "away": Object {
      "abbrev": "BAL",
      "color": "2D2D8B",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "awayPts": "27",
    "date": 2002-12-01T05:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "23",
    "homeWinProb": "0.3217262340799386",
    "id": "183",
    "result": "AWAY",
    "week": "13",
  },
  Object {
    "away": Object {
      "abbrev": "TB",
      "color": "A30C2D",
      "conference": "NFC",
      "division": "South",
      "id": "tam",
      "location": "Tampa Bay",
      "name": "Buccaneers",
    },
    "awayPts": "20",
    "date": 2002-12-01T05:00:00.000Z,
    "home": Object {
      "abbrev": "NO",
      "color": "9F8958",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "homePts": "23",
    "homeWinProb": "0.3400398444033593",
    "id": "191",
    "result": "HOME",
    "week": "13",
  },
  Object {
    "away": Object {
      "abbrev": "JAX",
      "color": "016576",
      "conference": "AFC",
      "division": "South",
      "id": "jax",
      "location": "Jacksonville",
      "name": "Jaguars",
    },
    "awayPts": "29",
    "date": 2002-12-15T05:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "15",
    "homeWinProb": "0.34714611924350797",
    "id": "215",
    "result": "AWAY",
    "week": "15",
  },
  Object {
    "away": Object {
      "abbrev": "MIN",
      "color": "4F2683",
      "conference": "NFC",
      "division": "North",
      "id": "min",
      "location": "Minneapolis",
      "name": "Vikings",
    },
    "awayPts": "32",
    "date": 2002-12-15T05:00:00.000Z,
    "home": Object {
      "abbrev": "NO",
      "color": "9F8958",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "homePts": "31",
    "homeWinProb": "0.7253610770962577",
    "id": "217",
    "result": "AWAY",
    "week": "15",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "color": "F04D23",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "9",
    "date": 2002-12-29T05:00:00.000Z,
    "home": Object {
      "abbrev": "BUF",
      "color": "005496",
      "conference": "AFC",
      "division": "East",
      "id": "buf",
      "location": "Buffalo",
      "name": "Bills",
    },
    "homePts": "27",
    "homeWinProb": "0.8257857846564032",
    "id": "243",
    "result": "AWAY",
    "week": "17",
  },
  Object {
    "away": Object {
      "abbrev": "CAR",
      "color": "0099D8",
      "conference": "NFC",
      "division": "South",
      "id": "car",
      "location": "Carolina",
      "name": "Panthers",
    },
    "awayPts": "10",
    "date": 2002-12-29T05:00:00.000Z,
    "home": Object {
      "abbrev": "NO",
      "color": "9F8958",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "homePts": "6",
    "homeWinProb": "0.6904245901869128",
    "id": "247",
    "result": "HOME",
    "week": "17",
  },
]
`;

exports[`ScheduleFilters finds the division games of one or more teams 1`] = `
Array [
  Object {
    "away": Object {
      "abbrev": "NE",
      "color": "002A5C",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "awayPts": "44",
    "date": 2002-09-15T04:00:00.000Z,
    "home": Object {
      "abbrev": "NYJ",
      "color": "145741",
      "conference": "AFC",
      "division": "East",
      "id": "nyj",
      "location": "New York",
      "name": "Jets",
    },
    "homePts": "7",
    "homeWinProb": "0.588191098145723",
    "id": "22",
    "result": "HOME",
    "week": "2",
  },
  Object {
    "away": Object {
      "abbrev": "NE",
      "color": "002A5C",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "awayPts": "13",
    "date": 2002-10-06T04:00:00.000Z,
    "home": Object {
      "abbrev": "MIA",
      "color": "038E97",
      "conference": "AFC",
      "division": "East",
      "id": "mia",
      "location": "Miami",
      "name": "Dolphins",
    },
    "homePts": "26",
    "homeWinProb": "0.6054475435746134",
    "id": "65",
    "result": "HOME",
    "week": "5",
  },
  Object {
    "away": Object {
      "abbrev": "NE",
      "color": "002A5C",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "awayPts": "38",
    "date": 2002-11-03T05:00:00.000Z,
    "home": Object {
      "abbrev": "BUF",
      "color": "005496",
      "conference": "AFC",
      "division": "East",
      "id": "buf",
      "location": "Buffalo",
      "name": "Bills",
    },
    "homePts": "7",
    "homeWinProb": "0.4822214998968611",
    "id": "120",
    "result": "HOME",
    "week": "9",
  },
  Object {
    "away": Object {
      "abbrev": "BUF",
      "color": "005496",
      "conference": "AFC",
      "division": "East",
      "id": "buf",
      "location": "Buffalo",
      "name": "Bills",
    },
    "awayPts": "17",
    "date": 2002-12-08T05:00:00.000Z,
    "home": Object {
      "abbrev": "NE",
      "color": "002A5C",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "homePts": "27",
    "homeWinProb": "0.6613203508620977",
    "id": "199",
    "result": "HOME",
    "week": "14",
  },
  Object {
    "away": Object {
      "abbrev": "NYJ",
      "color": "145741",
      "conference": "AFC",
      "division": "East",
      "id": "nyj",
      "location": "New York",
      "name": "Jets",
    },
    "awayPts": "30",
    "date": 2002-12-22T05:00:00.000Z,
    "home": Object {
      "abbrev": "NE",
      "color": "002A5C",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "homePts": "17",
    "homeWinProb": "0.5590638534368828",
    "id": "239",
    "result": "AWAY",
    "week": "16",
  },
  Object {
    "away": Object {
      "abbrev": "MIA",
      "color": "038E97",
      "conference": "AFC",
      "division": "East",
      "id": "mia",
      "location": "Miami",
      "name": "Dolphins",
    },
    "awayPts": "24",
    "date": 2002-12-29T05:00:00.000Z,
    "home": Object {
      "abbrev": "NE",
      "color": "002A5C",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "homePts": "27",
    "homeWinProb": "0.5414221984352134",
    "id": "246",
    "result": "HOME",
    "week": "17",
  },
]
`;

exports[`ScheduleFilters finds the division games of one or more teams 2`] = `
Array [
  Object {
    "away": Object {
      "abbrev": "NE",
      "color": "002A5C",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "awayPts": "44",
    "date": 2002-09-15T04:00:00.000Z,
    "home": Object {
      "abbrev": "NYJ",
      "color": "145741",
      "conference": "AFC",
      "division": "East",
      "id": "nyj",
      "location": "New York",
      "name": "Jets",
    },
    "homePts": "7",
    "homeWinProb": "0.588191098145723",
    "id": "22",
    "result": "HOME",
    "week": "2",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "24",
    "date": 2002-09-15T04:00:00.000Z,
    "home": Object {
      "abbrev": "SEA",
      "color": "002A5C",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "homePts": "13",
    "homeWinProb": "0.7238725878948057",
    "id": "28",
    "result": "AWAY",
    "week": "2",
  },
  Object {
    "away": Object {
      "abbrev": "NE",
      "color": "002A5C",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "awayPts": "13",
    "date": 2002-10-06T04:00:00.000Z,
    "home": Object {
      "abbrev": "MIA",
      "color": "038E97",
      "conference": "AFC",
      "division": "East",
      "id": "mia",
      "location": "Miami",
      "name": "Dolphins",
    },
    "homePts": "26",
    "homeWinProb": "0.6054475435746134",
    "id": "65",
    "result": "HOME",
    "week": "5",
  },
  Object {
    "away": Object {
      "abbrev": "SF",
      "color": "C9243F",
      "conference": "NFC",
      "division": "West",
      "id": "sfo",
      "location": "San Francisco",
      "name": "49ers",
    },
    "awayPts": "28",
    "date": 2002-10-14T04:00:00.000Z,
    "home": Object {
      "abbrev": "SEA",
      "color": "002A5C",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "homePts": "21",
    "homeWinProb": "0.48725668924976073",
    "id": "88",
    "result": "AWAY",
    "week": "6",
  },
  Object {
    "away": Object {
      "abbrev": "SEA",
      "color": "002A5C",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "awayPts": "20",
    "date": 2002-10-20T04:00:00.000Z,
    "home": Object {
      "abbrev": "STL",
      "color": "002960",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "homePts": "37",
    "homeWinProb": "0.5546630210171175",
    "id": "91",
    "result": "HOME",
    "week": "7",
  },
  Object {
    "away": Object {
      "abbrev": "NE",
      "color": "002A5C",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "awayPts": "38",
    "date": 2002-11-03T05:00:00.000Z,
    "home": Object {
      "abbrev": "BUF",
      "color": "005496",
      "conference": "AFC",
      "division": "East",
      "id": "buf",
      "location": "Buffalo",
      "name": "Bills",
    },
    "homePts": "7",
    "homeWinProb": "0.4822214998968611",
    "id": "120",
    "result": "HOME",
    "week": "9",
  },
  Object {
    "away": Object {
      "abbrev": "SEA",
      "color": "002A5C",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "awayPts": "27",
    "date": 2002-11-10T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "color": "B1063A",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "6",
    "homeWinProb": "0.411808901854277",
    "id": "140",
    "result": "HOME",
    "week": "10",
  },
  Object {
    "away": Object {
      "abbrev": "SEA",
      "color": "002A5C",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "awayPts": "24",
    "date": 2002-12-01T05:00:00.000Z,
    "home": Object {
      "abbrev": "SF",
      "color": "C9243F",
      "conference": "NFC",
      "division": "West",
      "id": "sfo",
      "location": "San Francisco",
      "name": "49ers",
    },
    "homePts": "31",
    "homeWinProb": "0.6566872090520836",
    "id": "189",
    "result": "HOME",
    "week": "13",
  },
  Object {
    "away": Object {
      "abbrev": "BUF",
      "color": "005496",
      "conference": "AFC",
      "division": "East",
      "id": "buf",
      "location": "Buffalo",
      "name": "Bills",
    },
    "awayPts": "17",
    "date": 2002-12-08T05:00:00.000Z,
    "home": Object {
      "abbrev": "NE",
      "color": "002A5C",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "homePts": "27",
    "homeWinProb": "0.6613203508620977",
    "id": "199",
    "result": "HOME",
    "week": "14",
  },
  Object {
    "away": Object {
      "abbrev": "STL",
      "color": "002960",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "awayPts": "10",
    "date": 2002-12-22T05:00:00.000Z,
    "home": Object {
      "abbrev": "SEA",
      "color": "002A5C",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "homePts": "30",
    "homeWinProb": "0.5925226388401105",
    "id": "236",
    "result": "HOME",
    "week": "16",
  },
  Object {
    "away": Object {
      "abbrev": "NYJ",
      "color": "145741",
      "conference": "AFC",
      "division": "East",
      "id": "nyj",
      "location": "New York",
      "name": "Jets",
    },
    "awayPts": "30",
    "date": 2002-12-22T05:00:00.000Z,
    "home": Object {
      "abbrev": "NE",
      "color": "002A5C",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "homePts": "17",
    "homeWinProb": "0.5590638534368828",
    "id": "239",
    "result": "AWAY",
    "week": "16",
  },
  Object {
    "away": Object {
      "abbrev": "MIA",
      "color": "038E97",
      "conference": "AFC",
      "division": "East",
      "id": "mia",
      "location": "Miami",
      "name": "Dolphins",
    },
    "awayPts": "24",
    "date": 2002-12-29T05:00:00.000Z,
    "home": Object {
      "abbrev": "NE",
      "color": "002A5C",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "homePts": "27",
    "homeWinProb": "0.5414221984352134",
    "id": "246",
    "result": "HOME",
    "week": "17",
  },
]
`;

exports[`ScheduleFilters finds the head-to-head games between two or more teams 1`] = `
Array [
  Object {
    "away": Object {
      "abbrev": "CAR",
      "color": "0099D8",
      "conference": "NFC",
      "division": "South",
      "id": "car",
      "location": "Carolina",
      "name": "Panthers",
    },
    "awayPts": "0",
    "date": 2002-10-20T04:00:00.000Z,
    "home": Object {
      "abbrev": "ATL",
      "color": "C9243F",
      "conference": "NFC",
      "division": "South",
      "id": "atl",
      "location": "Atlanta",
      "name": "Falcons",
    },
    "homePts": "30",
    "homeWinProb": "0.7436264488089395",
    "id": "96",
    "result": "HOME",
    "week": "7",
  },
  Object {
    "away": Object {
      "abbrev": "ATL",
      "color": "C9243F",
      "conference": "NFC",
      "division": "South",
      "id": "atl",
      "location": "Atlanta",
      "name": "Falcons",
    },
    "awayPts": "41",
    "date": 2002-11-24T05:00:00.000Z,
    "home": Object {
      "abbrev": "CAR",
      "color": "0099D8",
      "conference": "NFC",
      "division": "South",
      "id": "car",
      "location": "Carolina",
      "name": "Panthers",
    },
    "homePts": "0",
    "homeWinProb": "0.38855939978857634",
    "id": "163",
    "result": "AWAY",
    "week": "12",
  },
]
`;

exports[`ScheduleFilters finds the head-to-head games between two or more teams 2`] = `
Array [
  Object {
    "away": Object {
      "abbrev": "CAR",
      "color": "0099D8",
      "conference": "NFC",
      "division": "South",
      "id": "car",
      "location": "Carolina",
      "name": "Panthers",
    },
    "awayPts": "0",
    "date": 2002-10-20T04:00:00.000Z,
    "home": Object {
      "abbrev": "ATL",
      "color": "C9243F",
      "conference": "NFC",
      "division": "South",
      "id": "atl",
      "location": "Atlanta",
      "name": "Falcons",
    },
    "homePts": "30",
    "homeWinProb": "0.7436264488089395",
    "id": "96",
    "result": "HOME",
    "week": "7",
  },
  Object {
    "away": Object {
      "abbrev": "ATL",
      "color": "C9243F",
      "conference": "NFC",
      "division": "South",
      "id": "atl",
      "location": "Atlanta",
      "name": "Falcons",
    },
    "awayPts": "34",
    "date": 2002-11-10T05:00:00.000Z,
    "home": Object {
      "abbrev": "PIT",
      "color": "FEC20C",
      "conference": "AFC",
      "division": "North",
      "id": "pit",
      "location": "Pittsburgh",
      "name": "Steelers",
    },
    "homePts": "34",
    "homeWinProb": "0.5402427886444857",
    "id": "132",
    "result": "TIE",
    "week": "10",
  },
  Object {
    "away": Object {
      "abbrev": "ATL",
      "color": "C9243F",
      "conference": "NFC",
      "division": "South",
      "id": "atl",
      "location": "Atlanta",
      "name": "Falcons",
    },
    "awayPts": "41",
    "date": 2002-11-24T05:00:00.000Z,
    "home": Object {
      "abbrev": "CAR",
      "color": "0099D8",
      "conference": "NFC",
      "division": "South",
      "id": "car",
      "location": "Carolina",
      "name": "Panthers",
    },
    "homePts": "0",
    "homeWinProb": "0.38855939978857634",
    "id": "163",
    "result": "AWAY",
    "week": "12",
  },
  Object {
    "away": Object {
      "abbrev": "CAR",
      "color": "0099D8",
      "conference": "NFC",
      "division": "South",
      "id": "car",
      "location": "Carolina",
      "name": "Panthers",
    },
    "awayPts": "14",
    "date": 2002-12-15T05:00:00.000Z,
    "home": Object {
      "abbrev": "PIT",
      "color": "FEC20C",
      "conference": "AFC",
      "division": "North",
      "id": "pit",
      "location": "Pittsburgh",
      "name": "Steelers",
    },
    "homePts": "30",
    "homeWinProb": "0.7156158253479346",
    "id": "209",
    "result": "HOME",
    "week": "15",
  },
]
`;
